[package]
name = "gossip_glomers_grow_only_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107" }
tokio = {version = "1.33.0", features = ["full"]}